--- a/page.html
+++ b/page.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>bako mantap</title>
   </head>
-  <body></body>
+  <body>
+    <h1>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, atque,
+      delectus blanditiis exercitationem voluptatem illo quas quam similique
+      quod nam tenetur sequi. Reprehenderit beatae in ratione pariatur fugit
+      illum expedita.
+    </h1>
+  </body>
 </html>
